RESOLVED FIXED41040
:before/:after content should not become part of a ruby base
https://bugs.webkit.org/show_bug.cgi?id=41040
Summary :before/:after content should not become part of a ruby base
Roland Steiner
Reported 2010-06-22 21:44:32 PDT
Created attachment 59475 [details] test case Text content generated by :before and :after selectors should not become part of any annotated ruby base. I.e., for <ruby>base<rt>text</rt></ruby>, "text" should annotate only/exatly "base", regardless whether there is additional :before or :after content. Added a test case.
Attachments
test case (299 bytes, text/html)
2010-06-22 21:44 PDT, Roland Steiner
no flags
patch - explicitly handle generated content (31.62 KB, patch)
2010-07-08 01:11 PDT, Roland Steiner
no flags
patch - explicitly handle generated content (skip on gtk & qt) (32.68 KB, patch)
2010-07-08 19:40 PDT, Roland Steiner
no flags
Patch (35.75 KB, patch)
2010-09-03 01:05 PDT, Roland Steiner
hyatt: review+
Roland Steiner
Comment 1 2010-07-08 01:11:57 PDT
Created attachment 60847 [details] patch - explicitly handle generated content
Roland Steiner
Comment 2 2010-07-08 19:40:43 PDT
Created attachment 60998 [details] patch - explicitly handle generated content (skip on gtk & qt)
Roland Steiner
Comment 3 2010-07-08 21:58:53 PDT
Addendum to patch: No Windows baseline for the new test yet. (Also, please note that I will be away for the next 2 weeks on vacation and can't respond immediately to reviews and queries.)
Roland Steiner
Comment 4 2010-09-03 01:05:30 PDT
Roland Steiner
Comment 5 2010-09-03 01:07:46 PDT
Uploaded a new patch that subsumes the fix from https://bugs.webkit.org/show_bug.cgi?id=43722. Since this changes the code that was added by that patch I think I should request a new review. Also, extended the layout test from 43722 to also test for floated ruby elements (making them block elements) and adding a similar test for :after content.
Roland Steiner
Comment 6 2010-10-13 02:15:28 PDT
Committed as WK r69642.
Note You need to log in before you can comment on or make changes to this bug.